# ROS2_ADS_Loop

./: .gitignore  requirements.txt
ADS_data/: 20240531_204909_ADS.csv  20240531_204936_ADS.csv  20240531_205004_ADS.csv
ADS_logs/: 20240531_204909_ADSlog.txt  20240531_204936_ADSlog.txt  20240531_205004_ADSlog.txt  20240607_164839_ADSlog.txt
Calibration/: calibrate.py  gatherIMU.py  gathermag.py  magCal.py  magCalMeasure.py  magCalParameter.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/my-test-package/share/my-test-package/: package.sh
install/ros_ads_loop/lib/ros_ads_loop/: ads_suite  estimation_node
install/ros_ads_loop/share/ros_ads_loop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lib/: AD7994.py
log/: latest_build
my_custom_msgs/: CMakeLists.txt  package.xml
ros_ads_loop/: package.xml  setup.cfg  setup.py
ros_ads_loop/ros_ads_loop/: ADS_ROS_CLASS.py  ADS_class.py  EKFQ.py  EKFQ_non_bias.py  QUEST.py  TRIAD_C.py  correctSensor_v6.py  gps_test.py  icm20948_lib.py  models.py  rtc.py  rviz_publisher.py  sun_vect.py  test_arduino_com.py
